
ccat-next:
=====
new features:
- move first netif_carrier_off() in front of register_netdev()
- replace polling threads with hrtimer callback

code cleanup:
- remove debugging code from mainline tree
- reorder functions in netdev.c to avoid forward declarations
- reorder functions in update.c to avoid forward declarations
- don't use compat.h in the mainline tree
- reduce enum ccat_info_t to the minimal set of defines
- replace CamelCased Windows typedef structs with linux types
- use short kernel types, add empty lines after variable declaration to conform with linux codestyle



0.9:
====
- Avoided unused return value warning. (Patch from Florian Pose <IgH>)
- replaced DEV_NAME with KBUILD_MODNAME

Test log:
----------|      | generic/|
  Kernel  | arch | ec_ccat | device |  os   |result (fping, netio, etherlab)
==========|======|=========|================================================
2.6.32.61 | i386 | generic | CX2030 | 12.04 | EtherLab not running, poor latency (fping average of 6ms), because of a poor dummy implementation for the missing usleep_range() -> use a modern kernel...
2.6.32.61 | i386 | ec_ccat | CX2030 | 12.04 | no errors
2.6.32.61 |x86_64| generic | CX2030 | 12.04 | EtherLab not running, poor latency (fping average of 6ms), because of a poor dummy implementation for the missing usleep_range() -> use a modern kernel...
2.6.32.61 |x86_64| ec_ccat | CX2030 | 12.04 | no errors
3.4.69    | i386 | generic | CX2030 | 12.04 | no errors
3.4.69    | i386 | ec_ccat | CX2030 | 12.04 | no errors
3.4.69    |x86_64| generic | CX2030 | 12.04 | no errors
3.4.69    |x86_64| ec_ccat | CX2030 | 12.04 | no errors
3.12.18   | i386 | generic | CX5020 | 14.04 | no errors
3.12.18   | i386 | ec_ccat | CX5020 | 14.04 | no errors

* os/12.04 means Ubuntu 12.04 LTS
* os/14.04 means Ubuntu 14.04 LTS



0.8:
====
- added support for Kernel 2.6.32


          |      | generic/|
  Kernel  | arch | ec_ccat | result (fping, etherlab)